--- a/main.html
+++ b/main.html
@@ -4,10 +4,50 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<p>List of all transcations</p>
+
+  <table class="table">
+  <thead>
+    <tr class="bg-dark text-light">
+      <th scope="col">#</th>
+      <th scope="col">From</th>
+      <th scope="col">To</th>
+      <th scope="col">Amount($)</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>1000</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+      <td>1500</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td >Jack</td>
+		<td>Thornton</td>
+      <td>2000</td>
+    </tr>
+	<hr>
+	<tr>
+	  <th colspan="2"></th>
+	  <th>Total</th>
+      <th>4000</th>
+    </tr>
+  </tbody>
+</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
