--- a/main.html
+++ b/main.html
@@ -41,9 +41,8 @@
       <td>2000</td>
     </tr>
 	<hr>
-	<tr>
-	  <th colspan="2"></th>
-	  <th>Total</th>
+	<tr class="bg-light">
+	  <th  colspan="3" class="text-right" id="total">Total</th>
       <th>4000</th>
     </tr>
   </tbody>
