--- a/main.html
+++ b/main.html
@@ -13,8 +13,8 @@
 	<p>List of all transcations</p>
 
   <table class="table">
-  <thead>
-    <tr class="bg-dark text-light">
+  <thead class="bg-dark text-light">
+    <tr>
       <th scope="col">#</th>
       <th scope="col">From</th>
       <th scope="col">To</th>
