--- a/main.html
+++ b/main.html
@@ -41,8 +41,8 @@
       <td>2000</td>
     </tr>
 	<tfoot class="table-light">
-		<tr id="total">
-		  <th  colspan="3" class="text-right">Total</th>
+		<tr>
+		  <th  colspan="3" class="text-right" id="total">Total</th>
 	      <th>4000</th>
 	    </tr>
 	</tfoot>
